@@ -3,6 +3,10 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2017-10-24 Matthias Scholz <ms@jammerhund.de>
+  * small multimonitor fix: place some popups during closing OpenJUMP or a
+    project on the same monitor as OpenJUMP is running.
+
 2017-10-21 Giuseppe Aruta
   * Upgraded ColorChooser to version 9: 
    - correct #461 ColorChooser creates inconsistent schema
